SERVER-19643 Aggregation directly from a shard does not use sharding filter.